# mystore

./: LICENSE  README.md  default.nix  mystore.cabal  mystore.nix  shell.nix
src/: Api.hs  Main.hs
test/: basic.sh
