name:                mystore
version:             0.1.0.0
synopsis:            A simple HTTP REST service to store and retrieve files
author:              Guillaume Koenig
maintainer:          guillaume.edward.koenig@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable mystore
  main-is:             Main.hs
  build-depends:       base >=4.10 && <4.11
  default-language:    Haskell2010
